[package]
name = "geranium"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.6", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0", features = ["json"] }
image = "0.24.7"
serde_json = "1.0"
hyper-util = { version = "0.1.10", features = [
    "full",
    "server",
    "service",
    "tokio",
] }
http-body-util = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
foyer = "0.14.0"
lazy_static = "1.5.0"
anyhow = "1.0.95"
sha256 = "1.5.0"
cid = "0.11.1"
multihash-codetable = { version = "0.1.4", features = ["serde", "sha2"] }
